--- a/public/index.html
+++ b/public/index.html
@@ -23,44 +23,15 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #f4f6f9; }
     h2 { color: #2c3e50; font-size: 1.4rem; text-align: center; margin-top: 15px; }
-
     .container { display: flex; flex-direction: row; min-height: 100vh; overflow: hidden; }
-
-    .side-panel-wrapper {
-      width: 250px;
-      flex-shrink: 0;
-      display: flex;
-      flex-direction: column;
-      background: #2c3e50;
-      color: white;
-      transition: width 0.3s ease;
-      position: sticky;
-      top: 0;
-      height: 100vh;
-    }
+    .side-panel-wrapper { width: 250px; flex-shrink: 0; display: flex; flex-direction: column; background: #2c3e50; color: white; transition: width 0.3s ease; position: sticky; top: 0; height: 100vh; }
     .side-panel-wrapper.collapsed { width: 40px; }
-    .side-panel {
-      flex: 1;
-      overflow-y: auto;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-    .collapse-btn {
-      background: #34495e;
-      color: white;
-      border: none;
-      width: 100%;
-      padding: 5px 0;
-      cursor: pointer;
-      font-size: 1rem;
-      flex-shrink: 0;
-    }
+    .side-panel { flex: 1; overflow-y: auto; padding: 20px; box-sizing: border-box; }
+    .collapse-btn { background: #34495e; color: white; border: none; width: 100%; padding: 5px 0; cursor: pointer; font-size: 1rem; flex-shrink: 0; }
     .side-panel img { width: 100%; border-radius: 10px; margin-bottom: 15px; transition: all 0.3s; }
     .side-panel h3, .side-panel p, .side-panel ul, .side-panel a { transition: all 0.3s; }
     .side-panel-wrapper.collapsed .side-panel * { display: none; }
-
     .main-content { flex: 1; padding: 15px; text-align: center; overflow-y: auto; height: 100vh; box-sizing: border-box; }
-
     .mode-toggle { margin: 15px 0; }
     .toggle-label { margin: 0 10px; font-weight: bold; cursor: pointer; }
     .hidden { display: none; }
@@ -91,7 +62,6 @@
 
 <body>
   <div class="container">
-    <!-- Left Side Panel -->
     <div class="side-panel-wrapper" id="sidePanelWrapper">
       <button class="collapse-btn" id="collapseBtn">⬅️</button>
       <div class="side-panel">
@@ -109,10 +79,8 @@
       </div>
     </div>
 
-    <!-- Right Main Content -->
     <div class="main-content">
       <h2>📚 AI Question Solver<br>(Physics | Chemistry | Math | Biology)</h2>
-
       <div class="mode-toggle">
         <label class="toggle-label"><input type="radio" name="mode" value="image" checked /> 📷 Upload Image</label>
         <label class="toggle-label"><input type="radio" name="mode" value="text" /> ✍️ Type Question</label>
@@ -150,59 +118,50 @@
   </div>
 
   <script>
-    // ====================== Side Panel Collapse ======================
+    // ===== Side Panel Collapse =====
     const collapseBtn = document.getElementById("collapseBtn");
     const sidePanelWrapper = document.getElementById("sidePanelWrapper");
+    collapseBtn.addEventListener("click", ()=>{ sidePanelWrapper.classList.toggle("collapsed"); collapseBtn.innerText = sidePanelWrapper.classList.contains("collapsed") ? "➡️" : "⬅️"; });
+    function handleResize(){ if(window.innerWidth<768){ sidePanelWrapper.classList.add("collapsed"); collapseBtn.innerText="➡️"; } else{ sidePanelWrapper.classList.remove("collapsed"); collapseBtn.innerText="⬅️"; } }
+    window.addEventListener("resize", handleResize); handleResize();
 
-    collapseBtn.addEventListener("click", ()=>{
-      sidePanelWrapper.classList.toggle("collapsed");
-      collapseBtn.innerText = sidePanelWrapper.classList.contains("collapsed") ? "➡️" : "⬅️";
-    });
+    // ===== Image Upload & Mobile-Friendly OCR =====
+    let cropper=null;
+    const cropModal=document.getElementById("cropModal");
+    const cropImage=document.getElementById("cropImage");
+    const confirmCrop=document.getElementById("confirmCrop");
+    const cancelCrop=document.getElementById("cancelCrop");
+    const resultBox=document.getElementById("result");
 
-    // ====================== Auto-collapse on Resize ======================
-    function handleResize() {
-      if(window.innerWidth < 768){
-        sidePanelWrapper.classList.add("collapsed");
-        collapseBtn.innerText = "➡️";
-      } else {
-        sidePanelWrapper.classList.remove("collapsed");
-        collapseBtn.innerText = "⬅️";
-      }
-    }
-    window.addEventListener("resize", handleResize);
-    handleResize(); // initial check
-
-    // ====================== Image Upload & OCR ======================
-    let cropper = null;
-    const cropModal = document.getElementById("cropModal");
-    const cropImage = document.getElementById("cropImage");
-    const confirmCrop = document.getElementById("confirmCrop");
-    const cancelCrop = document.getElementById("cancelCrop");
-    const resultBox = document.getElementById("result");
-
-    const handleFile = (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
-      cropImage.src = URL.createObjectURL(file);
-      cropModal.style.display = "flex";
-      cropImage.onload = () => {
-        if (cropper) cropper.destroy();
-        cropper = new Cropper(cropImage, { viewMode: 1, autoCropArea: 1, movable: true, zoomable: true, responsive: true });
+    const handleFile=(e)=>{
+      const file=e.target.files[0]; if(!file) return;
+      cropImage.src=URL.createObjectURL(file);
+      cropModal.style.display="flex";
+      cropImage.onload=()=>{
+        if(cropper) cropper.destroy();
+        cropper=new Cropper(cropImage,{ viewMode:1, autoCropArea:1, movable:true, zoomable:true, responsive:true });
       };
     };
     document.getElementById("cameraInput").addEventListener("change", handleFile);
     document.getElementById("galleryInput").addEventListener("change", handleFile);
 
-    cancelCrop.onclick = () => { cropModal.style.display = "none"; cropper?.destroy(); cropper=null; };
+    cancelCrop.onclick=()=>{ cropModal.style.display="none"; cropper?.destroy(); cropper=null; };
 
-    confirmCrop.onclick = async () => {
-      if (!cropper) return;
-      cropModal.style.display = "none";
-      const canvas = cropper.getCroppedCanvas();
+    confirmCrop.onclick=async()=>{
+      if(!cropper) return;
+      cropModal.style.display="none";
+      const canvas=cropper.getCroppedCanvas({width:1500,height:1500});
+      const ctx=canvas.getContext("2d");
+      ctx.filter="contrast(150%) brightness(110%)"; // mobile-friendly enhancement
       cropper.destroy(); cropper=null;
       resultBox.innerHTML="⏳ Reading and solving question...";
-      const blob = await new Promise(res=>canvas.toBlob(res,"image/png"));
-      const { data: { text } } = await Tesseract.recognize(blob,"eng");
+      const blob=await new Promise(res=>canvas.toBlob(res,"image/png"));
+      const { data } = await Tesseract.recognize(blob,"eng");
+      const text=data.text.trim();
+      if(!text || data.confidence<40){ // lowered threshold for mobile
+        resultBox.innerHTML="⚠️ Image unclear. Please retake a clearer photo for mobile streaming.";
+        return;
+      }
       resultBox.innerHTML=`<b>Extracted Text:</b><br>${text.replace(/\n/g,"<br>")}<br><br>`;
       await searchSolution(text);
     };
@@ -224,11 +183,9 @@
       return md;
     }
 
-    // ====================== AI Solution ======================
+    // ===== AI Solution =====
     async function searchSolution(text){
-      const resp=await fetch("https://ai-question-and-its-solution-3oip.onrender.com/ask-ai",{
-        method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({question:text})
-      });
+      const resp=await fetch("https://ai-question-and-its-solution-3oip.onrender.com/ask-ai",{ method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({question:text}) });
       if(!resp.ok){ resultBox.innerHTML="❌ Error fetching AI response."; return; }
       resultBox.innerHTML=`<b>G10EP AI Answer (streaming):</b><br><div id="streamOutput" style="white-space:pre-wrap;"></div>`;
       const streamDiv=document.getElementById("streamOutput");
@@ -236,63 +193,41 @@
       while(true){
         const {done,value}=await reader.read(); if(done) break;
         const chunk=decoder.decode(value,{stream:true}); full+=chunk;
-        let processed=markdownToHTML(full)
-          .replace(/(Step\s*\d+[:.]?)/gi,'<b style="color:#007bff">$1</b>')
-          .replace(/^###\s*(.*)$/gm,'<h3>$1</h3>')
-          .replaceAll("**","").replaceAll("- ","<br>• ")
-          .replace(/\n{2,}/g,"<br><br>").replace(/\n/g,"<br>");
+        let processed=markdownToHTML(full).replace(/(Step\s*\d+[:.]?)/gi,'<b style="color:#007bff">$1</b>').replace(/^###\s*(.*)$/gm,'<h3>$1</h3>').replaceAll("**","").replaceAll("- ","<br>• ").replace(/\n{2,}/g,"<br><br>").replace(/\n/g,"<br>");
         streamDiv.innerHTML=processed;
         clearTimeout(window._mjTimer); window._mjTimer=setTimeout(()=>MathJax.typesetPromise([streamDiv]),200);
       }
       await MathJax.typesetPromise([streamDiv]);
     }
 
-    document.getElementById("solveManual").onclick = async ()=>{
+    document.getElementById("solveManual").onclick=async()=>{
       const text=document.getElementById("manualQuestion").value.trim();
       if(!text) return alert("Please enter a question.");
       resultBox.innerHTML="⏳ Searching...";
       await searchSolution(text);
     };
 
-    // ====================== Question Code Mode with Live Suggestions ======================
-    const subjectUrls={
-      chemistry:"https://ai-question-and-its-solution-3oip.onrender.com/chemistry",
-      physics:"https://ai-question-and-its-solution-3oip.onrender.com/physics",
-      math:"https://ai-question-and-its-solution-3oip.onrender.com/math",
-      biology:"https://ai-question-and-its-solution-3oip.onrender.com/biology"
-    };
+    // ===== Question Code Mode =====
+    const subjectUrls={chemistry:"https://ai-question-and-its-solution-3oip.onrender.com/chemistry",physics:"https://ai-question-and-its-solution-3oip.onrender.com/physics",math:"https://ai-question-and-its-solution-3oip.onrender.com/math",biology:"https://ai-question-and-its-solution-3oip.onrender.com/biology"};
     let questionBanks={}, fuseIndex={};
     const codeInput=document.getElementById("questionCode");
     const autoList=document.getElementById("autocomplete-list");
 
     for(let subj in subjectUrls){
       fuseIndex[subj]=new Fuse([], { keys: ["code","question.text"], threshold: 0.3 });
-      fetch(subjectUrls[subj])
-        .then(r=>r.json())
-        .then(data=>{
-          questionBanks[subj]=data;
-          fuseIndex[subj]=new Fuse(data, { keys: ["code","question.text"], threshold: 0.3 });
-        }).catch(()=>{});
+      fetch(subjectUrls[subj]).then(r=>r.json()).then(data=>{ questionBanks[subj]=data; fuseIndex[subj]=new Fuse(data, { keys: ["code","question.text"], threshold: 0.3 }); }).catch(()=>{});
     }
 
     function renderQA(item, subj){
-      let html=`<b>Subject:</b> ${subj}<br>`;
-      if(item.code) html+=`<p><b>Code:</b> <span class="small">${item.code}</span></p>`;
+      let html=`<b>Subject:</b> ${subj}<br>`; if(item.code) html+=`<p><b>Code:</b> <span class="small">${item.code}</span></p>`;
       html+=`<p><b>Question:</b> <span class="mathjax">${item.question?.text||"❌ Question not found"}</span></p>`;
       html+=`<p><b>Solution:</b> <span class="mathjax">${item.solution?.text||"❌ Solution not found"}</span></p>`;
-      if(item.solution_steps?.length){
-        html+=`<p><b>Solution Steps:</b></p><ul class="solution-step-list">`;
-        item.solution_steps.forEach(step=>{
-          const stepHtml=step.replace(/(Step\s*\d+[:.]?)/gi,'<b style="color:#007bff">$1</b>').replace(/^###\s*(.*)$/gm,'<h3>$1</h3>');
-          html+=`<li><span class="mathjax">${stepHtml}</span></li>`;
-        });
-        html+=`</ul>`;
-      }
+      if(item.solution_steps?.length){ html+=`<p><b>Solution Steps:</b></p><ul class="solution-step-list">`; item.solution_steps.forEach(step=>{ const stepHtml=step.replace(/(Step\s*\d+[:.]?)/gi,'<b style="color:#007bff">$1</b>').replace(/^###\s*(.*)$/gm,'<h3>$1</h3>'); html+=`<li><span class="mathjax">${stepHtml}</span></li>`; }); html+=`</ul>`; }
       setTimeout(()=>{ MathJax.typesetPromise([document.getElementById("result")]); },60);
       return html;
     }
 
-    codeInput.addEventListener("input", ()=>{
+    codeInput.addEventListener("input",()=>{
       const val=codeInput.value.trim().toUpperCase();
       autoList.innerHTML="";
       if(!val) return;
@@ -302,19 +237,15 @@
           const div=document.createElement("div");
           const snippet=r.item.question?.text?.substring(0,50).replace(/\n/g," ") || "";
           div.innerText=`[${subj}] ${r.item.code} — ${snippet}...`;
-          div.onclick=()=>{ 
-            codeInput.value=r.item.code;
-            autoList.innerHTML="";
-            resultBox.innerHTML=renderQA(r.item, subj);
-          };
+          div.onclick=()=>{ codeInput.value=r.item.code; autoList.innerHTML=""; resultBox.innerHTML=renderQA(r.item, subj); };
           autoList.appendChild(div);
         });
       }
     });
 
-    document.addEventListener("click", e=>{ if(e.target!==codeInput) autoList.innerHTML=""; });
+    document.addEventListener("click",e=>{ if(e.target!==codeInput) autoList.innerHTML=""; });
 
-    document.getElementById("solveCode").onclick = ()=>{
+    document.getElementById("solveCode").onclick=()=>{
       const code=codeInput.value.trim().toUpperCase();
       if(!code) return alert("Please enter a question code.");
       resultBox.innerHTML="⏳ Searching question code...";
