--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
           <li>Practice tests & MCQs</li>
           <li>Expert doubt clearing</li>
         </ul>
-        <p>🌐 Visit: <a href="https://g10educationalplatform.com" target="_blank">g10educationalplatform.com</a></p>
+        <p>🌐 Visit: <a href="https://www.g10educationalplatformindia.co.in/" target="_blank">WEBSITE</a></p>
       </div>
     </div>
 
