--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,14 @@
     #autocomplete-list div:hover { background-color: #e2e6ea; }
     @media (max-width: 768px) { .container { flex-direction: column; } .side-panel-wrapper { width: 100%; height: auto; position: relative; } .main-content { height: auto; } .solution-box::before { width: 200px; height: 200px; } }
     @media (max-width: 480px) { .solution-box::before { width: 140px; height: 140px; opacity: 0.12; } }
+ 
+  .side-panel a {
+  color: red !important;
+  text-decoration: underline;
+}
+.side-panel a:hover {
+  color: #ff4d4d !important; /* lighter red on hover */
+}
   </style>
 </head>
 
